--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "tailwind-scrollbar": "^3.0.4"
   }
 }
