--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "recharts": "^2.6.2",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
